@@ -79,9 +79,8 @@ packed together with echomail. Each flavour is processed independently.
 It creates bundle names using algorithm of two addresses difference.
 Log file 'bsopack.log' is placed into 'logFileDir'.
 
-This program was written & tested only under Linux. So, I'm not sure
-that it will be compiled and will work properly under other OSes. But I tried
-not to use OS-dependent code.
+This program now supports only Win32 and Linux. Because I don't have other 
+OSes, I cant' compile & test for other platforms.
 
 Some parts of code was used & modified from hpt.
 
